--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
-    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/jquery": "^3.5.8",
-    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.9",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
@@ -38,7 +36,6 @@
     "express": "^4.17.1",
     "jest": "^27.3.1",
     "jquery": "^3.6.0",
-    "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
@@ -56,8 +53,7 @@
     "testMatch": [
       "**/test/fixtures/*.spec.ts"
     ],
-    "setupFilesAfterEnv": [
-      "./test/jest.setup.ts"
-    ]
+    "globalSetup": "./test/setup.ts",
+    "globalTeardown": "./test/teardown.ts"
   }
 }
