--- a/package.json
+++ b/package.json
@@ -40,13 +40,9 @@
     "@types/jquery": "^3.5.9",
     "@types/node": "^16.11.9",
     "axios": "^0.24.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "esbuild": "^0.13.15",
-    "express": "^4.17.1",
     "jest": "^27.3.1",
     "jquery": "^3.6.0",
-    "multer": "^1.4.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
@@ -59,11 +55,10 @@
     "jquery": ">= 1.12 || 2.x || 3.x"
   },
   "jest": {
+    "clearMocks": true,
     "testEnvironment": "jsdom",
     "testMatch": [
       "**/test/fixtures/*.spec.ts"
-    ],
-    "globalSetup": "./test/setup.ts",
-    "globalTeardown": "./test/teardown.ts"
+    ]
   }
 }
