--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   ],
   "scripts": {
     "clean": "rimraf dist/ lib/ types/",
-    "prebuild": "pnpm run clean",
     "build": "rollup --config rollup.config.js",
     "dev": "pnpm run build -- --watch",
-    "test": "jest",
-    "prepublishOnly": "pnpm run build"
+    "test:local": "jest",
+    "test": "run-s clean build test:local",
+    "prepublishOnly": "run-s clean build"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -43,6 +43,7 @@
     "esbuild": "^0.13.15",
     "jest": "^27.3.1",
     "jquery": "^3.6.0",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^4.0.1",
