--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "0.26.1",
     "esbuild": "0.14.38",
     "jest": "27.5.1",
+    "jest-environment-jsdom": "28.0.0",
     "jquery": "3.6.0",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
